#
# File:
#      CMakeLists.txt
#
# Description:
#      Definitions to create the build environment with cmake
#
# Documentation:
#      See the CMake documentation.
#
# License:
#      Copyright (c) 2011-2014 Made to Order Software Corp.
#
#      http://snapwebsites.org/
#      contact@m2osw.com
#
#      This program is free software; you can redistribute it and/or modify
#      it under the terms of the GNU General Public License as published by
#      the Free Software Foundation; either version 2 of the License, or
#      (at your option) any later version.
#
#      This program is distributed in the hope that it will be useful,
#      but WITHOUT ANY WARRANTY; without even the implied warranty of
#      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#      GNU General Public License for more details.
#
#      You should have received a copy of the GNU General Public License
#      along with this program; if not, write to the Free Software
#      Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
#

cmake_minimum_required(VERSION 2.8)

project( snapCMakeModules )

file( GLOB MODULES Modules/*.cmake )
message( "CMake Modules to install: '${MODULES}'" )
install( FILES ${MODULES} DESTINATION share/cmake-2.8/Modules )

file( GLOB SCRIPTS Modules/*.sh )
message( "Shell scripts to install: '${SCRIPTS}'" )
install( FILES ${SCRIPTS} DESTINATION bin )

